chassis_esp32/build/log/idf_py_stderr_output_1931090
/home/yuangod/project/workspace/yuangod_smart_car/chassis_esp32/components/softap_sta/campus_network.c: In function 'can_http_result':
/home/yuangod/project/workspace/yuangod_smart_car/chassis_esp32/components/softap_sta/campus_network.c:28:1: error: no return statement in function returning non-void [-Werror=return-type]
   28 | }
      | ^
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/build.make:90：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/campus_network.c.obj] 错误 1
make[2]: *** 正在等待未完成的任务....
make[1]: *** [CMakeFiles/Makefile2:5090：esp-idf/softap_sta/CMakeFiles/__idf_softap_sta.dir/all] 错误 2
make: *** [Makefile:136：all] 错误 2
